--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <img src="img/logo.svg" alt="Логотип сучасної пекарні">
             </a>
             <ul>
-                <li><a href="#">Франшиза</a></li>
-                <li><a href="#">Наші традиції</a></li>
-                <li><a href="#">Формати</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a href="#traditions-section">Наші традиції</a></li>
+                <li><a href="#chefs-section">Шеф-кухарі</a></li>
+                <li><a href="#formats-section">Формати</a></li>
+                <li><a href="#contact-section">Контакти</a></li>
             </ul>
         </nav>
         <button type="button">Замовити дзвінок</button>
@@ -36,13 +36,15 @@
             </p>
             <img src="img/baker-man.jpg" alt="Чоловік пекар дивиться на батони з посмішкою">
         </section>
-        <section>
-            <ul>Великий попит на ринку</ul>
-            <ul>Доступні за бюджетом формати</ul>
-            <ul>Досвідчена управлінська команда</ul>
+        <section id="traditions-section">
+            <ul>
+                <li>Великий попит на ринку</li>
+                <li>Доступні за бюджетом формати</li>
+                <li>Досвідчена управлінська команда</li>
+            </ul>
             <h2>Новий формат традицій</h2>
         </section>
-        <section>
+        <section id="chefs-section">
             <h2>Наші найкращі <span>шеф-кухарі</span></h2>
             <ul>
                 <li>
@@ -69,7 +71,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section id="formats-section">
             <h2>Формати</h2>
             <ul>
                 <li>
@@ -101,8 +103,13 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section id="contact-section">
             <h2>Приєднуйся до мережі пекарень</h2>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3257.892465097796!2d30.488653212580168!3d50.45667308679651!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e1!3m2!1suk!2sua!4v1699531225714!5m2!1suk!2sua"
+                width="603" height="595" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </section>
     </main>
     <footer>
@@ -141,7 +148,7 @@
                 </li>
             </ul>
             <a href="#" target="_blank">Політика конфіденційності</a>
-            <p>© 2022 Дані захищені</p>
+            <p>&copy; 2022 Дані захищені</p>
         </address>
     </footer>
 </body>
