--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Сучасна пекарня</title>
 </head>
 
@@ -15,18 +16,18 @@
                 <img src="img/logo.svg" alt="Логотип сучасної пекарні">
             </a>
             <ul>
-                <li><a href="#traditions-section">Наші традиції</a></li>
-                <li><a href="#chefs-section">Шеф-кухарі</a></li>
-                <li><a href="#formats-section">Формати</a></li>
-                <li><a href="#contact-section">Контакти</a></li>
+                <li ><a class="link" href="#traditions-section">Наші традиції</a></li>
+                <li"><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+                <li><a class="link" href="#formats-section">Формати</a></li>
+                <li><a class="link" href="#contact-section">Контакти</a></li>
             </ul>
         </nav>
-        <button type="button">Замовити дзвінок</button>
+        <button class="button" type="button">Замовити дзвінок</button>
         <!--замовити дзвінок-->
     </header>
     <main>
         <section>
-            <h1>Сучасна <span>пекарня</span></h1>
+            <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
             <p><span>shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та
                 натуральність інгредієнтів.</p>
             <p>Ми працюємо як найвідоміші мережі—
@@ -37,19 +38,19 @@
             <img src="img/baker-man.jpg" alt="Чоловік пекар дивиться на батони з посмішкою">
         </section>
         <section id="traditions-section">
-            <ul>
+            <ul class="advantages-list">
                 <li>Великий попит на ринку</li>
                 <li>Доступні за бюджетом формати</li>
                 <li>Досвідчена управлінська команда</li>
             </ul>
-            <h2>Новий формат традицій</h2>
+            <h2 class="section-title">Новий формат традицій</h2>
         </section>
         <section id="chefs-section">
-            <h2>Наші найкращі <span>шеф-кухарі</span></h2>
+            <h2 class="section-title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
             <ul>
                 <li>
                     <article>
-                        <h3>
+                        <h3 class="section-title">
                             Настя
                         </h3>
                         <p>Привіт, я Настя!</p>
@@ -60,7 +61,7 @@
                 </li>
                 <li>
                     <article>
-                        <h3>
+                        <h3 class="section-title">
                             Влад
                         </h3>
                         <p>Привіт, я Влад!</p>
@@ -72,11 +73,11 @@
             </ul>
         </section>
         <section id="formats-section">
-            <h2>Формати</h2>
+            <h2 class="section-title">Формати</h2>
             <ul>
                 <li>
                     <article>
-                        <h3>Walrus</h3>
+                        <h3 class="section-title">Walrus</h3>
                         <p>Площа: до 120 м2
                             Меню: розширене меню
                             Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби
@@ -85,7 +86,7 @@
                 </li>
                 <li>
                     <article>
-                        <h3>Horseshoe</h3>
+                        <h3 class="section-title">Horseshoe</h3>
                         <p>Площа: до 25 м2
                             Меню: найпопулярніші позиції меню
                             Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря
@@ -94,7 +95,7 @@
                 </li>
                 <li>
                     <article>
-                        <h3>Handlebar</h3>
+                        <h3 class="section-title">Handlebar</h3>
                         <p>Площа: до 15 м2
                             Меню: найпопулярніші позиції меню
                             Штат: 1 продавець, 1 пекар, 1 помічник пекаря
@@ -104,7 +105,7 @@
             </ul>
         </section>
         <section id="contact-section">
-            <h2>Приєднуйся до мережі пекарень</h2>
+            <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3257.892465097796!2d30.488653212580168!3d50.45667308679651!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e1!3m2!1suk!2sua!4v1699531225714!5m2!1suk!2sua"
                 width="603" height="595" allowfullscreen="" loading="lazy"
