--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
         </section>
         <section class="section" id="chefs-section">
             <div class="container">
-                <h2 class="chefs-title section-title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
+                <h2 class="chefs-title section-title centered">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
                 <ul>
                     <li>
                         <article>
+                            <img class="chef-photo" src="img/nastia-chef.jpg" alt="Настя пекар">
                             <h3 class="chef-title">
                                 Настя
                             </h3>
@@ -80,6 +81,7 @@
                     </li>
                     <li>
                         <article>
+                            <img class="chef-photo" src="img/vlad-chef.jpg" alt="Влад кухар">
                             <h3 class="chef-title">
                                 Влад
                             </h3>
@@ -95,7 +97,7 @@
         </section>
         <section class="section" id="formats-section">
             <div class="container">
-                <h2 class="formats-title section-title">Формати</h2>
+                <h2 class="formats-title section-title centered">Формати</h2>
                 <ul class="formats-list">
                     <li class="formats-item">
                         <article class="format-card">
@@ -146,7 +148,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <div class="container">
             <nav>
                 <a href="#">
