--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li><a class="link" href="#contact-section">Контакти</a></li>
                     </ul>
                 </nav>
-                <button class="button" type="button">Замовити дзвінок</button>
+                <button class="button modal-btn-open" type="button">Замовити дзвінок</button>
                 <!--замовити дзвінок-->
             </div>
         </div>
@@ -66,7 +66,8 @@
         </section>
         <section class="section" id="chefs-section">
             <div class="container">
-                <h2 class="chefs-title section-title centered">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
+                <h2 class="chefs-title section-title centered">Наші найкращі <br><span class="accent">шеф-кухарі</span>
+                </h2>
                 <ul class="chefs-list">
                     <li class="chefs-item">
                         <article class="chef-card">
@@ -220,9 +221,15 @@
                     </div>
                 </address>
             </div>
-
         </div>
     </footer>
+    <div class="backdrop is-hidden">
+        <div class="modal">
+            <button class="modal-btn-close" type="button">Close</button>
+
+        </div>
+    </div>
+    <script src="/js/modal.js"></script>
 </body>
 
 </html>
