--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="container">
             <div class="header-container">
                 <nav class="header-nav">
@@ -161,7 +161,24 @@
                     <div class="contact-form">
                         <h2 class="contact-title section-title">Приєднуйся до мережі пекарень</h2>
                         <p>Заповни форму, щоб ми звʼязались з тобою!</p>
-                        <!--form-->
+                        <form name="contact-form" autocomplete="off">
+                            <div class="form-field">
+                             <label class="form-label visually-hidden" for="user-name">Ім’я</label>
+                             <input class="form-input" type="text" name="user-name" id="user-name" placeholder="Ім’я">
+                            </div>
+                         <div class="form-field">
+                             <label class="form-label visually-hidden" for="user-phone">Телефон</label>
+                             <input class="form-input" type="tel" name="user-phone" id="user-phone" placeholder="Телефон">
+                         </div>
+                         <div class="form-field">
+                             <label class="form-label visually-hidden" for="user-email">Електронна пошта</label>  
+                         <input class="form-input" type="email" name="user-email" id="user-email" placeholder="Електронна пошта">
+                         </div>
+                     <button class="form-button button" type="submit">
+                         Замовити дзвінок
+                     </button>
+                     <p class="form-terms">Натискаючи на кнопку я погоджуюсь <a class="form-terms-link" href="#">з політикою конфіденційності</a></p>
+                         </form>
                     </div>
                     <iframe class="contact-map"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3257.892465097796!2d30.488653212580168!3d50.45667308679651!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e1!3m2!1suk!2sua!4v1699531225714!5m2!1suk!2sua"
@@ -226,7 +243,26 @@
     <div class="backdrop is-hidden">
         <div class="modal">
             <button class="modal-btn-close" type="button">Close</button>
-
+            <h2>Замовити дзвінок</h2>
+            <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
+            <form name="modal-form" autocomplete="off" novalidate>
+               <div class="form-field">
+                <label class="form-label visually-hidden" for="user-name">Ім’я</label>
+                <input class="form-input" type="text" name="user-name" id="user-name" placeholder="Ім’я">
+               </div>
+            <div class="form-field">
+                <label class="form-label visually-hidden" for="user-phone">Телефон</label>
+                <input class="form-input" type="tel" name="user-phone" id="user-phone" placeholder="Телефон">
+            </div>
+            <div class="form-field">
+                <label class="form-label visually-hidden" for="user-email">Електронна пошта</label>  
+            <input class="form-input" type="email" name="user-email" id="user-email" placeholder="Електронна пошта">
+            </div>
+        <button class="form-button button" type="submit">
+            Замовити дзвінок
+        </button>
+        <p class="form-terms">Натискаючи на кнопку я погоджуюсь <a class="form-terms-link" href="#">з політикою конфіденційності</a></p>
+            </form>
         </div>
     </div>
     <script src="/js/modal.js"></script>
