--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="scss/main.css">
     <title>Сучасна пекарня</title>
 </head>
 
@@ -248,15 +248,15 @@
             <form name="modal-form" autocomplete="off" novalidate>
                <div class="form-field">
                 <label class="form-label visually-hidden" for="user-name">Ім’я</label>
-                <input class="form-input" type="text" name="user-name" id="user-name" placeholder="Ім’я">
+                <input class="form-input" type="text" name="user-name" id="user-name" placeholder="Ім’я" required>
                </div>
             <div class="form-field">
                 <label class="form-label visually-hidden" for="user-phone">Телефон</label>
-                <input class="form-input" type="tel" name="user-phone" id="user-phone" placeholder="Телефон">
+                <input class="form-input" type="tel" name="user-phone" id="user-phone" placeholder="Телефон" required>
             </div>
             <div class="form-field">
                 <label class="form-label visually-hidden" for="user-email">Електронна пошта</label>  
-            <input class="form-input" type="email" name="user-email" id="user-email" placeholder="Електронна пошта">
+            <input class="form-input" type="email" name="user-email" id="user-email" placeholder="Електронна пошта" required>
             </div>
         <button class="form-button button" type="submit">
             Замовити дзвінок
