--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="scss/main.css">
+    <link rel="stylesheet" href="scss/main.min.css">
     <title>Сучасна пекарня</title>
 </head>
 
 <body>
     <header class="header">
         <div class="container">
-            <div class="header-container">
-                <nav class="header-nav">
+            <div class="header__container">
+                <nav class="header__nav">
                     <a href="#">
                         <img src="img/logo.svg" alt="Логотип сучасної пекарні">
                     </a>
-                    <ul class="header-menu">
+                    <ul class="header__menu">
                         <li><a class="link" href="#traditions-section">Наші традиції</a></li>
                         <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
                         <li><a class="link" href="#formats-section">Формати</a></li>
@@ -32,29 +32,29 @@
     <main>
         <section class="hero-section">
             <div class="container">
-                <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
+                <h1 class="hero-section__title"><span class="text-brand">Сучасна</span> пекарня</h1>
             </div>
         </section>
         <section class="advantages-section">
             <div class="container">
                 <h2 class="visually-hidden">Наші переваги</h2>
-                <ul class="advantages-list">
-                    <li class="advantages-item">Великий попит на ринку</li>
-                    <li class="advantages-item">Доступні за бюджетом формати</li>
-                    <li class="advantages-item">Досвідчена управлінська команда</li>
+                <ul class="advantages-section__list">
+                    <li class="advantages-section__item">Великий попит на ринку</li>
+                    <li class="advantages-section__item">Доступні за бюджетом формати</li>
+                    <li class="advantages-section__item">Досвідчена управлінська команда</li>
                 </ul>
             </div>
         </section>
         <section class="section traditions-section" id="traditions-section">
             <div class="container">
-                <div class="traditions-container">
-                    <div class="traditions-content">
-                        <h2 class="traditions-title section-title">Новий формат традицій</h2>
-                        <p class="traditions-text"><span class="uppercase brand">shop bakery</span> — це пекарня, яка
+                <div class="traditions-section__container">
+                    <div class="traditions-section__content">
+                        <h2 class="traditions-section__title section-title">Новий формат традицій</h2>
+                        <p><span class="text-uppercase text-brand text-bold">shop bakery</span> — це пекарня, яка
                             взяла все найкраще, і зберегла смак традиційної випічки та
                             натуральність інгредієнтів.</p>
-                        <p class="traditions-text limited">Ми працюємо як найвідоміші мережі—
-                            <span class="brand">5 хвилин і замовлення готове.</span> А ще у наших пекарень стильний
+                        <p class="traditions-section__text traditions-section__text--limited">Ми працюємо як найвідоміші мережі—
+                            <span class="text-brand text-bold">5 хвилин і замовлення готове.</span> А ще у наших пекарень стильний
                             дизайн та висока якість обслуговування!
                         </p>
                     </div>
@@ -64,59 +64,58 @@
                 </div>
             </div>
         </section>
-        <section class="section" id="chefs-section">
+        <section class="chefs-section section" id="chefs-section">
             <div class="container">
-                <h2 class="chefs-title section-title centered">Наші найкращі <br><span class="accent">шеф-кухарі</span>
+                <h2 class="chefs-section__title section__title section__title--centered">Наші найкращі <br><span class="text-brand-dark">шеф-кухарі</span>
                 </h2>
-                <ul class="chefs-list">
-                    <li class="chefs-item">
+                <ul class="chefs-section__list">
+                    <li class="chefs-section__item">
                         <article class="chef-card">
-                            <img class="chef-photo" src="img/nastia-chef.jpg" alt="Настя пекар">
+                            <img class="chef-card__photo" src="img/nastia-chef.jpg" alt="Настя пекар">
                             <div>
-                                <h3 class="chef-title">
+                                <h3 class="chef-card__title">
                                     Настя
                                 </h3>
-                                <div class="chef-text">
-                                    <p>Привіт, я Настя!</p>
-                                    <p>Вже 10 років, я втілюю <br>у життя цікаві та смачні ідеї.</p>
-                                    <p>Я випічу для вас <br>найсмачніщі вироби!</p>
+                                <div class="chef-card__text">
+                                    <p class="chef-card__text">Привіт, я Настя!</p>
+                                    <p class="chef-card__text">Вже 10 років, я втілюю <br>у життя цікаві та смачні ідеї.</p>
+                                    <p class="chef-card__text">Я випічу для вас <br>найсмачніщі вироби!</p>
                                 </div>
                             </div>
                         </article>
                     </li>
-                    <li class="chefs-item">
+                    <li class="chefs-section__item">
                         <article class="chef-card">
-                            <img class="chef-photo" src="img/vlad-chef.jpg" alt="Влад кухар">
+                            <img class="chef-card__photo" src="img/vlad-chef.jpg" alt="Влад кухар">
                             <div>
-                                <h3 class="chef-title">
+                                <h3 class="chef-card__title">
                                     Влад
                                 </h3>
-                                <div class="chef-text">
-                                    <p>Привіт, я Влад!</p>
-                                    <p>Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з
+                                    <p class="chef-card__text">Привіт, я Влад!</p>
+                                    <p class="chef-card__text">Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з
                                         якою ми ділимось кожен раз з Вами через нашу випічку!</p>
-                                    <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
-                                </div>
+                                    <p class="chef-card__text">Я зроблю для вас унікальну начинку на будь який смак!</p>
                             </div>
                         </article>
                     </li>
                 </ul>
             </div>
         </section>
-        <section class="section" id="formats-section">
+        <section class="formats-section section" id="formats-section">
             <div class="container">
-                <h2 class="formats-title section-title centered">Формати</h2>
-                <div class="formats-container">
-                    <button class="carousel-button" type="button">
+                <h2 class="formats-section__title section__title section__title--centered">Формати</h2>
+                <div class="formats-section__slider">
+                    <button class="formats-section__button carousel-button" type="button">
                         <svg class="carousel-arrow" width="44" height="44">
                             <use href="/img/symbol-defs.svg#icon-Arrow"></use>
                         </svg>
                     </button>
-                    <ul class="formats-list">
-                        <li class="formats-item">
+                    <ul class="formats-section__list">
+                        <li class="formats-section__item">
                             <article class="format-card">
-                                <h3 class="format-title">Walrus</h3>
-                                <div class="format-text">
+                                <img class="format-card__image" src="/img/walrus-format.jpg" alt="walrus format">
+                                <h3 class="format-card__title">Walrus</h3>
+                                <div class="format-card__text">
                                     <p>Площа: до 120 м2</p>
                                     <p>Меню: розширене меню</p>
                                     <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби</p>
@@ -124,10 +123,11 @@
                                 </div>
                             </article>
                         </li>
-                        <li class="formats-item">
+                        <li class="formats-section__item">
                             <article class="format-card">
-                                <h3 class="format-title">Horseshoe</h3>
-                                <div class="format-text">
+                                <img class="format-card__image" src="/img/horseshoe-format.jpg" alt="horseshoe format">
+                                <h3 class="format-card__title">Horseshoe</h3>
+                                <div class="format-card__text">
                                     <p>Площа: до 25 м2</p>
                                     <p>Меню: найпопулярніші позиції меню</p>
                                     <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
@@ -135,10 +135,11 @@
                                 </div>
                             </article>
                         </li>
-                        <li class="formats-item">
+                        <li class="formats-section__item">
                             <article class="format-card">
-                                <h3 class="format-title">Handlebar</h3>
-                                <div class="format-text">
+                                <img class="format-card__image" src="/img/handlebar-format.jpg" alt="handlebar format">
+                                <h3 class="format-card__title">Handlebar</h3>
+                                <div class="format-card__text">
                                     <p>Площа: до 15 м2</p>
                                     <p>Меню: найпопулярніші позиції меню</p>
                                     <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
@@ -155,32 +156,32 @@
                 </div>
             </div>
         </section>
-        <section class="section contact-section" id="contact-section">
+        <section class="contact-section section" id="contact-section">
             <div class="container">
-                <div class="contact-container">
-                    <div class="contact-form">
-                        <h2 class="contact-title section-title">Приєднуйся до мережі пекарень</h2>
+                <div class="contact-section__container">
+                    <div class="contact-section__form">
+                        <h2 class="contact-section__title section-title">Приєднуйся до мережі пекарень</h2>
                         <p>Заповни форму, щоб ми звʼязались з тобою!</p>
                         <form name="contact-form" autocomplete="off">
-                            <div class="form-field">
-                             <label class="form-label visually-hidden" for="user-name">Ім’я</label>
-                             <input class="form-input" type="text" name="user-name" id="user-name" placeholder="Ім’я">
+                            <div class="contact-section__form-field input">
+                             <label class="input__label visually-hidden" for="user-name">Ім’я</label>
+                             <input class="input__control" type="text" name="user-name" id="user-name" placeholder="Ім’я">
                             </div>
-                         <div class="form-field">
-                             <label class="form-label visually-hidden" for="user-phone">Телефон</label>
-                             <input class="form-input" type="tel" name="user-phone" id="user-phone" placeholder="Телефон">
+                         <div class="contact-section__form-field input">
+                             <label class="input__label visually-hidden" for="user-phone">Телефон</label>
+                             <input class="input__control" type="tel" name="user-phone" id="user-phone" placeholder="Телефон">
                          </div>
-                         <div class="form-field">
-                             <label class="form-label visually-hidden" for="user-email">Електронна пошта</label>  
-                         <input class="form-input" type="email" name="user-email" id="user-email" placeholder="Електронна пошта">
+                         <div class="contact-section__form-field input">
+                             <label class="input__label visually-hidden" for="user-email">Електронна пошта</label>  
+                         <input class="input__control" type="email" name="user-email" id="user-email" placeholder="Електронна пошта">
                          </div>
-                     <button class="form-button button" type="submit">
+                     <button class="contact-section__button button" type="submit">
                          Замовити дзвінок
                      </button>
-                     <p class="form-terms">Натискаючи на кнопку я погоджуюсь <a class="form-terms-link" href="#">з політикою конфіденційності</a></p>
+                     <p class="form__terms">Натискаючи на кнопку я погоджуюсь <a class="form__terms--link" href="#">з політикою конфіденційності</a></p>
                          </form>
                     </div>
-                    <iframe class="contact-map"
+                    <iframe class="contact-section__map"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3257.892465097796!2d30.488653212580168!3d50.45667308679651!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637bfe1717%3A0x5370c2254ad1b952!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e1!3m2!1suk!2sua!4v1699531225714!5m2!1suk!2sua"
                         width="603" height="595" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade">
