--- a/index.html
+++ b/index.html
@@ -242,29 +242,30 @@
         </div>
     </footer>
     <div class="backdrop is-hidden">
-        <div class="modal">
-            <button class="modal-btn-close" type="button">Close</button>
-            <h2>Замовити дзвінок</h2>
-            <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
-            <form name="modal-form" autocomplete="off" novalidate>
-               <div class="form-field">
-                <label class="form-label visually-hidden" for="user-name">Ім’я</label>
-                <input class="form-input" type="text" name="user-name" id="user-name" placeholder="Ім’я" required>
-               </div>
-            <div class="form-field">
-                <label class="form-label visually-hidden" for="user-phone">Телефон</label>
-                <input class="form-input" type="tel" name="user-phone" id="user-phone" placeholder="Телефон" required>
+            <div class="modal">
+                <button class="modal-btn-close" type="button">Close</button>
+                <h2>Замовити дзвінок</h2>
+                <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
+                <form name="modal-form" autocomplete="off" novalidate>
+                   <div class="modal__form-field input">
+                    <label class="form-label visually-hidden" for="user-name">Ім’я</label>
+                    <input class="input__control" type="text" name="user-name" id="user-name" placeholder="Ім’я" required>
+                   </div>
+                   <div class="modal__form-field input">
+                    <label class="form-label visually-hidden" for="user-phone">Телефон</label>
+                    <input class="input__control" type="tel" name="user-phone" id="user-phone" placeholder="Телефон" required>
+                   </div>
+                   <div class="modal__form-field input">
+                    <label class="form-label visually-hidden" for="user-email">Електронна пошта</label>  
+                <input class="input__control" type="email" name="user-email" id="user-email" placeholder="Електронна пошта" required>
+                </div>
+               <button class="modal__button button" type="submit">
+                Замовити дзвінок
+                </button>
+                <p class="form-terms">Натискаючи на кнопку я погоджуюсь <a class="form-terms__link" href="#">з політикою конфіденційності</a></p>
+                </form>
             </div>
-            <div class="form-field">
-                <label class="form-label visually-hidden" for="user-email">Електронна пошта</label>  
-            <input class="form-input" type="email" name="user-email" id="user-email" placeholder="Електронна пошта" required>
-            </div>
-        <button class="form-button button" type="submit">
-            Замовити дзвінок
-        </button>
-        <p class="form-terms">Натискаючи на кнопку я погоджуюсь <a class="form-terms-link" href="#">з політикою конфіденційності</a></p>
-            </form>
-        </div>
+
     </div>
     <script src="/js/modal.js"></script>
 </body>
